:bug: User icons are not centered

--- a/frontend/resources/styles/main/partials/workspace-header.scss
+++ b/frontend/resources/styles/main/partials/workspace-header.scss
@@ -15,7 +15,7 @@
 
   display: grid;
   grid-template-areas: "left center right";
-  grid-template-columns: auto 1fr auto;
+  grid-template-columns: 1fr auto 1fr;
   grid-template-rows: 100%;
   padding: 0;
 
@@ -32,6 +32,7 @@
   .right-area {
     grid-area: right;
     display: flex;
+    justify-content: flex-end;
     height: 100%;
   }
 
